--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <div class="healthbar">
                     <div class="healthbar text-center" style="background-color: green; margin: 0; color: white;"
                         :style="{ width: playerHealth + '%'}">
+                        {{ playerHealth }}
                     </div>
                 </div>
             </div>
@@ -24,7 +25,7 @@
                 <div class="healthbar">
                     <div class="healthbar text-center" style="background-color: green; margin: 0; color: white;"
                         :style="{ width: monsterHealth + '%'}">
-
+                        {{ monsterHealth }}
                     </div>
                 </div>
             </div>
